fix width div for the overflow ellypsis

--- a/assets/scss/menu.scss
+++ b/assets/scss/menu.scss
@@ -113,7 +113,7 @@ main {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      width: 80%;
+      width: 86%;
       h4,
       p {
         text-overflow: ellipsis;
@@ -142,7 +142,7 @@ main {
          transition-property: width ;
          transition-duration: 0.6s;
           P {
-          width: 80%;
+          width: 85%;
           transition-property: width ;
           transition-duration: 0.6s;
          }
